--- a/MiniPatapon/.classpath
+++ b/MiniPatapon/.classpath
@@ -8,5 +8,6 @@
 	<classpathentry kind="lib" path="libs/gdx.jar" sourcepath="libs/gdx-sources.jar"/>
 	<classpathentry kind="lib" path="libs/gson-2.1.jar"/>
 	<classpathentry kind="src" path="properties"/>
+	<classpathentry kind="lib" path="libs/bloom.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
