--- a/MiniPatapon/.classpath
+++ b/MiniPatapon/.classpath
@@ -8,5 +8,7 @@
 	<classpathentry kind="lib" path="libs/gdx.jar" sourcepath="libs/gdx-sources.jar"/>
 	<classpathentry kind="lib" path="libs/gson-2.1.jar"/>
 	<classpathentry kind="src" path="properties"/>
+	<classpathentry kind="lib" path="F:/游戏/libgdx/libgdx-0.9.4/sources/tween-engine-api-sources.jar"/>
+	<classpathentry kind="lib" path="F:/游戏/libgdx/libgdx-0.9.4/tween-engine-api.jar" sourcepath="F:/游戏/libgdx/libgdx-0.9.4/sources/tween-engine-api-sources.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
